    ** several micro-optimizations on x86-64, including: better use of
       INC/SUB, better SAP+, shorter KEYWORDP, better argument count
       verification
    ** arm64: better KEYWORDP, better argument count verification
    ** fix build on 32-bit Windows.  (lp#1988534, thanks to Alexis Rivera)
    ** x86-64: WITH-PINNED-OBJECTS can pin constants.  (lp#1989037)
  * bug fix: make sb-simd build in compiler-only SBCL.  (thanks to Tonas
    Hlavaty)
  * bug fix: SB-SPROF:WITH-PROFILING now returns the value of its body (as was
    advertised in its documentation).
  * bug fix: catch malformed LET* forms in DEFMETHOD bodies.  (lp#1988880,
    reported by Patrick Poitras)
  * enhancement: better source form tracking for atoms in LET bindings.
  * optimization: reader character macro lookup is simpler and faster.
  * optimization: FILL-POINTER (and its setter) are more compact.

changes in sbcl-2.2.8 relative to sbcl-2.2.7:
  * minor incompatible change: support for 32-bit x86/Darwin has been removed.
  * bug fix: fix miscompilation related to empty infinite loops preceded by
    conditional expressions. (lp#1986810, reported by Artyom Bologov)
  * bug fix: fix gc invariant violations.  (lp#1983218, reported by Marius
    Gerbershagen; lp#1983248, reported by Vasily Postnicov)
  * bug fix: use CC to compile SBCL as a shared library.  (lp#1976148,
    reported by Pierre Neidhardt)
  * bug fix: don't crash the system completely if RUN-PROGRAM fails to create
    a pipe.  (lp#1979841, reported by Thor Kristofferson)
  * bug fix: be more disciplined about use of C system includes.  (lp#1981799,
    reported by Mark Evenson)
  * bug fix: STRING/= returning wrong results for some cases when :END1/:END2
    were not compile-time constants.  (lp#1983284)
  * bug fix: compile-time checking of :START and :END keyword arguments to
    FILL is more complete.
  * optimization: adjacent type tests on the same value are more compact
    (arm64, x86-64).