@@ -135,29 +135,34 @@
          (code (slot record 'exception-code))
          (condition-name (cdr (assoc code *exception-code-map*)))
          (sb-debug:*stack-top-hint* (sb-kernel:find-interrupted-frame)))
-    (cond ((stringp condition-name)
-           (error condition-name))
-          ((and condition-name
-                (subtypep condition-name 'arithmetic-error))
-           (multiple-value-bind (op operands)
-               (sb-di::decode-arithmetic-error-operands context-sap)
-             ;; Reset the accumulated exceptions
-             (setf (ldb sb-vm:float-sticky-bits (sb-vm:floating-point-modes)) 0)
-             (error condition-name :operation op
-                                   :operands operands)))
-          ((eq condition-name 'memory-fault-error)
-           (error 'memory-fault-error :address
-                  (sap-int (deref (slot record 'exception-information) 1))))
-          (condition-name
-           (error condition-name))
-          ((= code +dbg-printexception-c+)
-           (dbg-printexception-c record))
-          ((= code +dbg-printexception-wide-c+)
-           (dbg-printexception-wide-c record))
-          (t
-           (cerror "Return from the exception handler"
-                   'exception :context context-sap :record exception-record-sap
-                              :code code)))))
+    (unwind-protect
+         (cond ((stringp condition-name)
+                (error condition-name))
+               ((and condition-name
+                     (subtypep condition-name 'arithmetic-error))
+                (multiple-value-bind (op operands)
+                    (sb-di::decode-arithmetic-error-operands context-sap)
+                  ;; Reset the accumulated exceptions
+                  (setf (ldb sb-vm:float-sticky-bits (sb-vm:floating-point-modes)) 0)
+                  (error condition-name :operation op
+                                        :operands operands)))
+               ((eq condition-name 'memory-fault-error)
+                (error 'memory-fault-error :address
+                       (sap-int (deref (slot record 'exception-information) 1))))
+               (condition-name
+                (error condition-name))
+               ((= code +dbg-printexception-c+)
+                (dbg-printexception-c record))
+               ((= code +dbg-printexception-wide-c+)
+                (dbg-printexception-wide-c record))
+               (t
+                (cerror "Return from the exception handler"
+                        'exception :context context-sap :record exception-record-sap
+                                   :code code)))
+      (when (eql code +exception-stack-overflow+)
+        ;; on the way out, reset win32's stack guard page.
+        (alien-funcall (extern-alien "win32_reset_stack_overflow_guard_page"
+                                     (function void)))))))
 
 
 (in-package "SB-UNIX")
