@@ -1879,6 +1879,7 @@ session."
                      `(alien-funcall (extern-alien ,fun (function void int
                                                                   system-area-pointer))
                                      1 thread-sap)))
+          #-win32
           (prot "protect_control_stack_guard_page")
           (prot "protect_binding_stack_guard_page")
           (prot "protect_alien_stack_guard_page")))
