@@ -144,6 +144,7 @@ protect_guard_page(void *page, int protect_p, os_vm_prot_t flags) {
         protect_guard_page(page_name(thread), protect_p, flags);        \
     }
 
+#ifndef LISP_FEATURE_WIN32
 DEF_PROTECT_PAGE(control_stack_hard_guard_page,
                  CONTROL_STACK_HARD_GUARD_PAGE,
                  OS_VM_PROT_NONE)
@@ -151,6 +152,7 @@ DEF_PROTECT_PAGE(control_stack_guard_page,
                  CONTROL_STACK_GUARD_PAGE, OS_VM_PROT_READ)
 DEF_PROTECT_PAGE(control_stack_return_guard_page,
                  CONTROL_STACK_RETURN_GUARD_PAGE, OS_VM_PROT_READ)
+#endif
 
 DEF_PROTECT_PAGE(binding_stack_hard_guard_page,
                  BINDING_STACK_HARD_GUARD_PAGE,
