@@ -39,7 +39,14 @@
 #if !defined(__ASSEMBLER__)
 #include "thread.h"
 
-#ifdef LISP_FEATURE_STACK_GROWS_DOWNWARD_NOT_UPWARD
+#if defined(LISP_FEATURE_WIN32)
+
+#define CONTROL_STACK_HARD_GUARD_PAGE(th) \
+    ((os_vm_address_t)(th->control_stack_start))
+#define CONTROL_STACK_GUARD_PAGE(th) \
+    (CONTROL_STACK_HARD_GUARD_PAGE(th) + win32_page_size + win32_stack_guarantee)
+
+#elif defined(LISP_FEATURE_STACK_GROWS_DOWNWARD_NOT_UPWARD)
 
 #define CONTROL_STACK_HARD_GUARD_PAGE(th) \
     ((os_vm_address_t)(th->control_stack_start))
@@ -47,6 +54,7 @@
     (CONTROL_STACK_HARD_GUARD_PAGE(th) + os_vm_page_size)
 #define CONTROL_STACK_RETURN_GUARD_PAGE(th) \
     (CONTROL_STACK_GUARD_PAGE(th) + os_vm_page_size)
+
 #else
 
 #define CONTROL_STACK_HARD_GUARD_PAGE(th) \
